Creating School and Search school

--- a/LecturankWeb/appsettings.json
+++ b/LecturankWeb/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sql5112.site4now.net;Database=db_aab50a_titusdb1;User ID=db_aab50a_titusdb1_admin; Password=xyz9990Game!;"
+  }
 }
