--- a/LecturankWeb/appsettings.json
+++ b/LecturankWeb/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql5112.site4now.net;Database=db_aab50a_titusdb1;User ID=db_aab50a_titusdb1_admin; Password=xyz9990Game!;"
+    "LecturankConnection": "Server=sql5112.site4now.net;Database=db_aab50a_titusdb1;User ID=db_aab50a_titusdb1_admin; Password=xyz9990Game!;"
   }
 }
